# FastApi

./: .env  README.md  main.py  pyproject.toml
Requests/: delete_me.py  login.py  logout.py  me.py  me_update.py  register.py
configs/: database.py
models/: user.py
routes/: auth.py  dependencies.py
schemas/: user.py
utils/: jwt_handler.py  redis_cache.py
